@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2020, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2020, 2022, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -23,13 +23,14 @@
 
 /*
  * @test
+ * @enablePreview
  * @run testng TestSpliterator
  */
 
-import jdk.incubator.foreign.MemoryLayout;
-import jdk.incubator.foreign.MemorySegment;
-import jdk.incubator.foreign.ResourceScope;
-import jdk.incubator.foreign.SequenceLayout;
+import java.lang.foreign.MemoryLayout;
+import java.lang.foreign.MemorySegment;
+import java.lang.foreign.MemorySession;
+import java.lang.foreign.SequenceLayout;
 
 import java.lang.invoke.VarHandle;
 import java.util.LinkedList;
@@ -40,15 +41,14 @@ import java.util.concurrent.RecursiveTask;
 import java.util.concurrent.atomic.AtomicLong;
 import java.util.stream.LongStream;
 
-import jdk.incubator.foreign.ValueLayout;
+import java.lang.foreign.ValueLayout;
 import org.testng.annotations.*;
 
 import static org.testng.Assert.*;
 
 public class TestSpliterator {
 
-    static final VarHandle INT_HANDLE = MemoryLayout.sequenceLayout(ValueLayout.JAVA_INT)
-            .varHandle(MemoryLayout.PathElement.sequenceElement());
+    static final VarHandle INT_HANDLE = ValueLayout.JAVA_INT.arrayElementVarHandle();
 
     final static int CARRIER_SIZE = 4;
 
@@ -57,12 +57,12 @@ public class TestSpliterator {
         SequenceLayout layout = MemoryLayout.sequenceLayout(size, ValueLayout.JAVA_INT);
 
         //setup
-        try (ResourceScope scope = ResourceScope.newSharedScope()) {
-            MemorySegment segment = MemorySegment.allocateNative(layout, scope);
-            for (int i = 0; i < layout.elementCount().getAsLong(); i++) {
+        try (MemorySession session = MemorySession.openShared()) {
+            MemorySegment segment = MemorySegment.allocateNative(layout, session);
+            for (int i = 0; i < layout.elementCount(); i++) {
                 INT_HANDLE.set(segment, (long) i, i);
             }
-            long expected = LongStream.range(0, layout.elementCount().getAsLong()).sum();
+            long expected = LongStream.range(0, layout.elementCount()).sum();
             //serial
             long serial = sum(0, segment);
             assertEquals(serial, expected);
@@ -84,11 +84,11 @@ public class TestSpliterator {
         SequenceLayout layout = MemoryLayout.sequenceLayout(1024, ValueLayout.JAVA_INT);
 
         //setup
-        MemorySegment segment = MemorySegment.allocateNative(layout, ResourceScope.newImplicitScope());
-        for (int i = 0; i < layout.elementCount().getAsLong(); i++) {
+        MemorySegment segment = MemorySegment.allocateNative(layout, MemorySession.openImplicit());
+        for (int i = 0; i < layout.elementCount(); i++) {
             INT_HANDLE.set(segment, (long) i, i);
         }
-        long expected = LongStream.range(0, layout.elementCount().getAsLong()).sum();
+        long expected = LongStream.range(0, layout.elementCount()).sum();
 
         //check that a segment w/o ACQUIRE access mode can still be used from same thread
         AtomicLong spliteratorSum = new AtomicLong();
